- Evolution: calcul des statistiques par format, avec alerte sur les fichiers vide
- Evolution: copie des statistiques vers le presse-papier
- Evolution: ajout recherche de doublons de groupes d'objets (DataObjectGroup SEDA) avec visualisation et circulation dans les résultats
- Evolution: prise en comptes des nouvelles métadonnées de sedalib (RelatedObjectReference)
- Evolution: retour d'information sur les recherches de doublons
- Evolution: circulation dans les doublons dans l'ordre naturel de l'arbre d'ArchiveUnit

============================================================================
Evolutions/Corrections en 1.2.0

 - Evolution: ajout de la fonction Rechercher dans les titres et métadonnées
 - Bug (corrigé): fermeture des fichiers après identification du format par Droid
 - Evolution: détection, alerte et proposition de changement ou de nettoyage quand un répertoire temporaire a déjà été utilisé
 - Evolution: les logs de MailExtract sont visibles dans la fenêtre d'import
 - Bug (corrigé): ajout par drag-and-drop dans un document vide
 - Evolution: suppression de la prise en compte du contexte d'exportation défini en ligne de commande
 - Evolution: ajout de la fonction Nettoyage de l'espace de travail

 [Evolutions de mailextract en 1.2.0-SNAPSHOT ayant un impact sur ReSIP]
 - Refacto: synchronisation de la version sedatools/mailextract
 - Evolution: prise en compte de l'évolution de la bibliothèque MailExtract (Changement de l'appel StoreExtractor)

============================================================================
Evolutions/Corrections en 1.1.0

- Evolution: mise à jour des bibliothèques java utilisées
- Evolution: ajout d'un jeu de caractéres d'encodage par défaut pour l'import de courriels (utilisé pour le décodage des pst)
[Evolution de mailextract correspondante en 0.9.2-SNAPSHOT]
- Evolution: les logs de MailExtract sont visibles dans la fenêtre d'import

============================================================================